[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/Paths/Paths - SS.png" type="Texture" id=2]
[ext_resource path="res://src/atlasPaths.tres" type="Texture" id=3]
[ext_resource path="res://src/TextLog.gd" type="Script" id=4]
[ext_resource path="res://src/StatVBox.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 16, 16 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -149.0
margin_bottom = 348.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 149.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 142.0
margin_bottom = 21.0
text = "@KaizarNike"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 149.0
margin_bottom = 96.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer"]
margin_left = 42.0
margin_right = 106.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 149.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 142.0
margin_bottom = 21.0
text = "#stopwaitingforgodot"

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.666667 )
margin_top = 132.0
margin_right = 149.0
margin_bottom = 348.0
size_flags_vertical = 3

[node name="TextLog" type="RichTextLabel" parent="VBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 142.0
margin_bottom = 209.0
text = "Very unfinish :0
"
script = ExtResource( 4 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_right = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatVBox" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 593.0
script = ExtResource( 5 )

[node name="Label" type="Label" parent="PanelContainer/StatVBox"]
margin_right = 50.0
margin_bottom = 14.0
text = "Paths:"

[node name="MPVSplit0" type="HSplitContainer" parent="PanelContainer/StatVBox"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 34.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/StatVBox/MPVSplit0"]
margin_right = 16.0
margin_bottom = 16.0
rect_clip_content = true
texture = ExtResource( 3 )

[node name="DecayStat" type="Label" parent="PanelContainer/StatVBox/MPVSplit0"]
margin_left = 28.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
text = "0"

[node name="MPVSplit1" type="HSplitContainer" parent="PanelContainer/StatVBox"]
margin_top = 38.0
margin_right = 50.0
margin_bottom = 54.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/StatVBox/MPVSplit1"]
margin_right = 16.0
margin_bottom = 16.0
rect_clip_content = true
texture = SubResource( 1 )

[node name="LifeStat" type="Label" parent="PanelContainer/StatVBox/MPVSplit1"]
margin_left = 28.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
text = "0"

[node name="MPVSplit2" type="HSplitContainer" parent="PanelContainer/StatVBox"]
margin_top = 58.0
margin_right = 50.0
margin_bottom = 74.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/StatVBox/MPVSplit2"]
margin_right = 16.0
margin_bottom = 16.0
rect_clip_content = true
texture = SubResource( 2 )

[node name="ReactionStat" type="Label" parent="PanelContainer/StatVBox/MPVSplit2"]
margin_left = 28.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
text = "0"

[node name="MPVSplit3" type="HSplitContainer" parent="PanelContainer/StatVBox"]
margin_top = 78.0
margin_right = 50.0
margin_bottom = 94.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/StatVBox/MPVSplit3"]
margin_right = 16.0
margin_bottom = 16.0
rect_clip_content = true
texture = SubResource( 3 )

[node name="MetaStat" type="Label" parent="PanelContainer/StatVBox/MPVSplit3"]
margin_left = 28.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
text = "0"

[node name="MPVSplit4" type="HSplitContainer" parent="PanelContainer/StatVBox"]
margin_top = 98.0
margin_right = 50.0
margin_bottom = 114.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/StatVBox/MPVSplit4"]
margin_right = 16.0
margin_bottom = 16.0
rect_clip_content = true
texture = SubResource( 4 )

[node name="DeathStat" type="Label" parent="PanelContainer/StatVBox/MPVSplit4"]
margin_left = 28.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
text = "0"

[node name="MPVSplit5" type="HSplitContainer" parent="PanelContainer/StatVBox"]
margin_top = 118.0
margin_right = 50.0
margin_bottom = 134.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/StatVBox/MPVSplit5"]
margin_right = 16.0
margin_bottom = 16.0
rect_clip_content = true
texture = SubResource( 5 )

[node name="SolarStat" type="Label" parent="PanelContainer/StatVBox/MPVSplit5"]
margin_left = 28.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
text = "0"

[node name="Label2" type="Label" parent="PanelContainer/StatVBox"]
margin_top = 138.0
margin_right = 50.0
margin_bottom = 152.0
text = "Health:"

[node name="HealthBar" type="ProgressBar" parent="PanelContainer/StatVBox"]
margin_top = 156.0
margin_right = 50.0
margin_bottom = 170.0
value = 100.0

[node name="Label3" type="Label" parent="PanelContainer/StatVBox"]
margin_top = 174.0
margin_right = 50.0
margin_bottom = 188.0
text = "Sanity:"

[node name="SanityBar" type="ProgressBar" parent="PanelContainer/StatVBox"]
margin_top = 192.0
margin_right = 50.0
margin_bottom = 206.0
value = 100.0

[node name="Label4" type="Label" parent="PanelContainer/StatVBox"]
margin_top = 210.0
margin_right = 50.0
margin_bottom = 224.0
text = "Hunger:"

[node name="HungerBar" type="ProgressBar" parent="PanelContainer/StatVBox"]
margin_top = 228.0
margin_right = 50.0
margin_bottom = 242.0
value = 100.0

[node name="Label5" type="Label" parent="PanelContainer/StatVBox"]
margin_top = 246.0
margin_right = 50.0
margin_bottom = 260.0
text = "Time:"

[node name="Time" type="ProgressBar" parent="PanelContainer/StatVBox"]
margin_top = 264.0
margin_right = 50.0
margin_bottom = 278.0

[node name="Label6" type="Label" parent="PanelContainer/StatVBox"]
margin_top = 282.0
margin_right = 50.0
margin_bottom = 296.0
text = "Gold:"

[node name="GoldStat" type="Label" parent="PanelContainer/StatVBox"]
margin_top = 300.0
margin_right = 50.0
margin_bottom = 314.0
text = "0"
align = 1

[node name="BotRight" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BRVBox" type="VBoxContainer" parent="BotRight"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PingButton" type="Button" parent="BotRight/BRVBox"]
margin_right = 90.0
margin_bottom = 20.0
text = "Ping Others"

[node name="PanelContainer" type="PanelContainer" parent="BotRight/BRVBox"]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="BotRight/BRVBox/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 21.0
text = "Multiplayer:"

[node name="PanelContainer2" type="PanelContainer" parent="BotRight/BRVBox"]
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 56.0
margin_right = 90.0
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BotRight/BRVBox/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 21.0
text = "0"
align = 1

[node name="VersionContainer" type="PanelContainer" parent="BotRight/BRVBox"]
margin_top = 88.0
margin_right = 90.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="BotRight/BRVBox/VersionContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 21.0
text = "changeme"
align = 1
